# guimorph-web

./: .Rprofile  .gitattributes  .gitignore  BUILD.md  Erik Handoff.md  NEWS.md  README.md  guimorph-web.Rproj  package-lock.json
.cursor/: gsd-file-manifest.json  gsd-install-state.json  hooks.json  rules
.cursor/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-security-auditor.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.cursor/commands/: gsd-add-tests.md  gsd-ai-integration-phase.md  gsd-audit-fix.md  gsd-audit-milestone.md  gsd-audit-uat.md  gsd-autonomous.md  gsd-capture.md  gsd-cleanup.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-config.md  gsd-debug.md  gsd-discuss-phase.md  gsd-docs-update.md  gsd-eval-review.md  gsd-execute-phase.md  gsd-explore.md  gsd-extract-learnings.md  gsd-fast.md  gsd-forensics.md  gsd-graphify.md  gsd-health.md  gsd-help.md  gsd-import.md  gsd-inbox.md  gsd-ingest-docs.md  gsd-manager.md  gsd-map-codebase.md  gsd-milestone-summary.md  gsd-mvp-phase.md  gsd-new-milestone.md  gsd-new-project.md  gsd-onboard.md  gsd-pause-work.md  gsd-phase.md  gsd-plan-phase.md  gsd-plan-review-convergence.md  gsd-pr-branch.md  gsd-profile-user.md  gsd-progress.md  (+20 more)
.cursor/gsd-core/references/: artifact-types.md  context-budget.md  edge-probe.md  model-profile-resolution.md  planner-guidance.md  planner-load-graph-context.md  planner-mvp-mode.md  prohibition-probe.md  verification-patterns.md
.cursor/gsd-core/templates/: phase-prompt.md
.cursor/gsd-core/workflows/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  debug.md  diagnose-issues.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  do.md  docs-update.md  edit-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  extract-learnings.md  forensics.md  graduation.md  health.md  import.md  ingest-docs.md  insert-phase.md  list-seeds.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  mvp-phase.md  new-milestone.md  (+41 more)
.cursor/rules/: gsd.md
.cursor/skills/gsd-add-tests/: SKILL.md
.cursor/skills/gsd-ai-integration-phase/: SKILL.md
.cursor/skills/gsd-audit-fix/: SKILL.md
.cursor/skills/gsd-audit-milestone/: SKILL.md
.cursor/skills/gsd-audit-uat/: SKILL.md
.cursor/skills/gsd-autonomous/: SKILL.md
.cursor/skills/gsd-capture/: SKILL.md
.cursor/skills/gsd-cleanup/: SKILL.md
.cursor/skills/gsd-code-review/: SKILL.md
.cursor/skills/gsd-complete-milestone/: SKILL.md
.cursor/skills/gsd-config/: SKILL.md
.cursor/skills/gsd-debug/: SKILL.md
.cursor/skills/gsd-discuss-phase/: SKILL.md
.cursor/skills/gsd-docs-update/: SKILL.md
.cursor/skills/gsd-eval-review/: SKILL.md
.cursor/skills/gsd-execute-phase/: SKILL.md
.cursor/skills/gsd-explore/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  WORKING-AGREEMENT.md  config.json  guimorph-modernization-plan.md  modernization-session-handoff.md  r-guimorph-setup-findings.md  smoke-test-findings.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: 07-01-dispatch-extraction.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/onboarding/: SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  REFERENCE-ARCHITECTURE.md  STACK.md  SUMMARY.md
integrated-guimorph-development_EOC/Project/tkogl2/: BUILD.md  CMakeLists.txt  tkogl2.sln  tkogl2.vcxproj
integrated-guimorph-development_EOC/Project/tkogl2/R/: 3dDigitize.curve.r  3dDigitize.digitize.r  geomorph.support.code.r
integrated-guimorph-development_EOC/Project/tkogl2/cmake/: mingw-w64-x86_64.cmake
integrated-guimorph-development_EOC/Project/tkogl2/docs/: AQUA-TK-SETUP.md
integrated-guimorph-development_EOC/Project/tkogl2/include/tcl_include/: regc_locale.c  tcl.h  tclBasic.c  tclCmdAH.c  tclCompCmds.c  tclCompExpr.c  tclCompile.h  tclDate.c  tclEnsemble.c  tclIndexObj.c  tclInt.decls  tclListObj.c  tclLoad.c  tclOOBasic.c  tclOOCall.c  tclOODefineCmds.c  tclOOMethod.c  tclStubInit.c  tclTest.c  tclThreadTest.c  tclUniData.c  tclUtf.c  tclVar.c
integrated-guimorph-development_EOC/Project/tkogl2/include/tk_include/: tk.h  tkEntry.c  tkImgPNG.c  tkImgPhInstance.c  tkImgPhoto.c  tkListbox.c  tkPanedWindow.c  tkScale.c  tkSelect.c  tkTextBTree.c  tkTextIndex.c  tkTextTag.c  tkUtil.c
integrated-guimorph-development_EOC/Project/tkogl2/include/tk_include/ttk/: ttkButton.c  ttkEntry.c
integrated-guimorph-development_EOC/Project/tkogl2/src/: RunTime_Defines_ZARF_9.h  StatisticsFunction_ZARF_9.c  StatisticsFunction_ZARF_9.h  curve_ZARF_9.c  def_ZARF_9.h  dot_ZARF_9.c  gfx_backend.h  gfx_backend_nsgl.m  gfx_backend_wgl.c  main.h  marker.c  marker.h  ogl_ZARF9.c  ogl_model_ZARF_9.c  ogl_model_ply_ZARF_9.c  tcl_dispatch.c  tcl_dispatch.h  tcl_if_ZARF_9.c  tcl_init.c  tcl_log.c  tcl_log.h  tcl_state.c  tcl_state.h  tcl_stub_bootstrap.c  tcl_window.c  tcl_window.h
integrated-guimorph-development_EOC/Project/tkogl2/test/fixtures/: regression.ply
integrated-guimorph-development_EOC/Project/tkogl2/test/gate/: .gitignore  CMakeLists.txt  gate_check.R  gate_ext.c
scripts/: bench-group-means.R  capture-renv-warnings.R  check-macos.R  check-template-kmeans-parity.R  deploy-dll.ps1  extract-tcl-dispatch.py  guimorph-startup.R  init-renv.R
(+357 files in other folders)
